fix the overflowing estimate section

--- a/public/stylesheets/scss/style.scss
+++ b/public/stylesheets/scss/style.scss
@@ -472,7 +472,7 @@ h2,
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-evenly;
     padding-bottom: 20px;
     a {
         color: $whiteMajor;
